# det

edge1/: docker-compose.yaml
edge1/collector/: Dockerfile
edge1/collector/ros2_ws/src/collector_node/: CMakeLists.txt  package.xml
edge1/collector/ros2_ws/src/collector_node/src/: collector_node.cpp
edge1/video_publisher/: Dockerfile
edge1/video_publisher/ros2_ws/src/viceo_publisher/: CMakeLists.txt  package.xml  video_publisher_node.py
edge1/yolo_processor/: Dockerfile
edge1/yolo_processor/ros2_ws/src/yolo_processor/: CMakeLists.txt  package.xml  yolo_processor_node.py
edge2/: docker-compose.yaml
edge2/processor/: Dockerfile
edge2/processor/ros2_ws/src/processor_node/: CMakeLists.txt  package.xml
edge2/processor/ros2_ws/src/processor_node/src/: processor_node.cpp
edge2/processor/ros2_ws/src/processor_node/: CMakeLists.txt
edge2/processor/ros2_ws/src/processor_node/src/: processor_node.cpp
