<?xml version="1.0"?>
<package format="3">
  <name>video_publisher</name>
  <version>0.0.1</version>
  <description>Publishes video frames as sensor_msgs/Image</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
