<?xml version="1.0"?>
<package format="2">
  <name>processor_node</name>
  <version>0.0.0</version>
  <description>Processor Node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>